Header background color contrast (fixes #4)

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -36,7 +36,7 @@
 @architecture:    #2dcfd5;
 @atouts:          #7c4bb4;
 
-@gray-lightest:   #f5f5f7;
+@gray-lightest:   #ECEBEB;
 
 //
 // Custom fonts
@@ -201,10 +201,12 @@ html, body {
 }
 #header {
   position: absolute;
+  z-index: 2;
   top: 0;
   width: 100%;
   height: 60px;
   background-color: @gray-lightest;
+  .box-shadow(0px 2px 0px rgba(0,0,0,0.2));
 
   .btn-group {
     position: relative;
@@ -219,6 +221,11 @@ html, body {
     font-size: 22px;
     display: inline-block;
     font-family: "Hero";
+
+    &:hover {
+      color: lighten(#CF001D, 10%);
+      text-decoration: none;
+    }
 
     img {
       margin-right: 10px;
